[package]
name = "libotp"
version = "0.2.0"
authors = ["Naim A. <naim94a@gmail.com>"]
description = "One Time Password generator"
license = "GPL-3.0"
repository = "https://github.com/naim94a/otp"
readme = "README.md"
keywords = ["RFC4226", "RFC6238", "OTP", "Authentication"]
categories = ["authentication"]

[dependencies]
ring = "^0.17"
binascii = "^0.1"

[lib]
name = "libotp"
crate-type = ["lib"]
